// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Action > .inputSchema > should be the schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "prefixItems": [
    {
      "type": "string",
    },
  ],
  "type": "array",
}
`;

exports[`Action > .outputSchema > should be the schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "prefixItems": [
    {
      "type": "number",
    },
  ],
  "type": "array",
}
`;

exports[`Action > execute() > should throw acknowledgment related errors 0 1`] = `
InputValidationError({
  "cause": ZodError({
    "issues": [
      {
        "code": "invalid_type",
        "expected": "function",
        "message": "Invalid input: expected function, received string",
        "path": [
          1,
        ],
      },
    ],
  }),
  "message": "[1]: Invalid input: expected function, received string",
})
`;

exports[`Action > execute() > should throw acknowledgment related errors 1 1`] = `
OutputValidationError({
  "cause": ZodError({
    "issues": [
      {
        "code": "invalid_type",
        "expected": "number",
        "message": "Invalid input: expected number, received string",
        "path": [
          0,
        ],
      },
    ],
  }),
  "message": "output[0]: Invalid input: expected number, received string",
})
`;

exports[`Action > execute() > should throw input parsing error 1`] = `
InputValidationError({
  "cause": ZodError({
    "issues": [
      {
        "code": "invalid_type",
        "expected": "string",
        "message": "Invalid input: expected string, received undefined",
        "path": [
          0,
        ],
      },
    ],
  }),
  "message": "[0]: Invalid input: expected string, received undefined",
})
`;
